--- a/templates/Login.html
+++ b/templates/Login.html
@@ -18,7 +18,8 @@
         <div class="container" id="container">
             <div class="form-container signin">
                 <form action="/Home" method="post">
-                    <h1>Sign In</h1>
+                    <p style="color: red;">{{error}}</p>
+                    <h1>Log In</h1>
                     <div class="social-icons">
                         <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                         <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
